--- a/src/style.css
+++ b/src/style.css
@@ -294,7 +294,7 @@
   }
 
   .container-skill {
-    margin-left: 5%;
+    margin-left: 10%;
   }
 
   .skill {
@@ -412,6 +412,10 @@
     text-transform: uppercase;
   }
 
+  .card-subtext {
+    font-size: 17px;
+  }
+
   .card-span {
     font-size: 12px;
     color: #262626;
@@ -421,7 +425,7 @@
     margin: 10px 0;
     padding: 0;
     color: #262626;
-    font-size: 13px;
+    font-size: 14px;
     font-family: Helvetica;
   }
 
