--- a/src/style.sass
+++ b/src/style.sass
@@ -254,7 +254,7 @@ $yellow: #f5a623
                                 font-size: 20px
 
                               .container-skill
-                                margin-left: 5%
+                                margin-left: 10%
                       
 
                               .skill
@@ -361,6 +361,9 @@ $yellow: #f5a623
                                 font-size: 20px
                                 text-transform: uppercase
 
+                              .card-subtext
+                                font-size: 17px
+
                               .card-span 
                                 font-size: 12px
                                 color: #262626
@@ -369,7 +372,7 @@ $yellow: #f5a623
                                 margin: 10px 0
                                 padding: 0
                                 color: #262626
-                                font-size: 13px
+                                font-size: 14px
                                 font-family: $helvetica
 
                               .card-list
